Continuação do index.html

--- a/index.html
+++ b/index.html
@@ -29,21 +29,36 @@
     <nav class="container-fluid bg-dark text-white py-4">
         <div class="row">
             <div class="col-md-2 navbar-text text-center text-md-left">
-                <a href="https://www.ucs.br/site" target="_blank">
-                    <img src="/imagens/Logo_UCS_Horizontal_Transparente.png" height="65" class="d-inline-block align-top" alt="Logo da UCS">
-                </a>
+                <img src="/imagens/Logo_UCS_Horizontal_Transparente.png" height="70" class="d-inline-block align-top" alt="Logo da UCS">
             </div>
-            <div class="col-md-10 my-auto text-center text-md-right">
+            <div class="titulo col-md-10 my-auto text-center text-md-right">
                 <u> 8º SEMINÁRIO DE TECNOLOGIA, INOVAÇÃO E DESENVOLVIMENTO SOCIAL - VIII STIDS </u>
                 <br>
-                DESAFIOS DA CIÊNCIA EM MEIO A CRISES
+                <span class="mt-2 mt-md-0">DESAFIOS DA CIÊNCIA EM MEIO A CRISES</span>
             </div>
         </div>
     </nav>
 
-    <div class="sobre">
-        Sobre o seminário
+    <div class="container pt-5">
+
+        <div class="row">
+            <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <div class="tags">Sobre o seminário</div>
+
+                O VIII Seminário de Tecnologia, Inovação e Desenvolvimento Social é um ambiente de discussão e interação visando consolidar aspectos técnicos e científicos ligados à formação profissional das áreas de engenharias e tecnologias. O evento propicia a ampliação da competência dos acadêmicos no sentido de interagir com outras áreas, oportunizando uma ampla visão dos desafios tecnológicos, sociais e ambientais, além de nortear acerca das responsabilidades profissionais e contribuir para a adoção de ações de sustentabilidade como forma de inovação e desenvolvimento da sociedade.
+            </div>
+
+            <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
+
+                Comissão Organizadora <br>
+
+                https://www.ucs.br/site/eventos/vi-seminario-de-tecnologia-inovacao-e-desenvolvimento-social/
+            </div>
+        
+        </div>
+
     </div>
+    
 
     <div class="data">
         30/09
@@ -51,7 +66,7 @@
         02/10
     </div>
 
-    <footer class="footer container-fluid bg-dark text-white pt-2">
+    <footer class="footer container-fluid bg-dark text-white pt-3">
         <!-- <div class="row">
             teste
         </div> -->
