Continuação do index.html

--- a/index.html
+++ b/index.html
@@ -42,16 +42,31 @@
     <div class="container pt-5">
 
         <div class="row">
-            <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
+            <div class="sobre col-lg-8 pr-5">
                 <div class="tags">Sobre o seminário</div>
 
                 O VIII Seminário de Tecnologia, Inovação e Desenvolvimento Social é um ambiente de discussão e interação visando consolidar aspectos técnicos e científicos ligados à formação profissional das áreas de engenharias e tecnologias. O evento propicia a ampliação da competência dos acadêmicos no sentido de interagir com outras áreas, oportunizando uma ampla visão dos desafios tecnológicos, sociais e ambientais, além de nortear acerca das responsabilidades profissionais e contribuir para a adoção de ações de sustentabilidade como forma de inovação e desenvolvimento da sociedade.
             </div>
 
-            <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
+            <div class="comissao col-lg-4 pl-lg-5 mt-5 mt-lg-0">
 
-                Comissão Organizadora <br>
+                <div class="tags">Comissão Organizadora</div>
 
+                <p>Andre Luis Martinotto - UCS</p>
+                <p>André Mauro Santos de Espindola - UCS</p>
+                <p>Carlos Alberto Costa - UCS</p>
+                <p>Daniel Antônio Faccin - UCS</p>
+                <p>Jadna Catafesta - UCS</p>
+                <p>Jean Greselle Balotin - UCS</p>
+                <p>Maurício Schafer - UCS</p>
+                <p>Muriel Scopel Froener - UCS</p>
+                <p>Neide Pessin - UCS</p>
+                <p>Renata Cornelli - UCS</p>
+                <p>Roselaine Cristina Mignoni - UCS</p>
+                <p>Scheila de Avila e Silva - UCS</p>
+
+
+                <br> <br>
                 https://www.ucs.br/site/eventos/vi-seminario-de-tecnologia-inovacao-e-desenvolvimento-social/
             </div>
         
