Conclusão do index.html

--- a/palestras.html
+++ b/palestras.html
@@ -271,11 +271,8 @@
         </div>
     </div>
     
-    <footer class="footer container-fluid bg-dark text-white pt-3">
-        <!-- <div class="row">
-            teste
-        </div> -->
-        <p>Desenvolvido por Eduardo Donelli e Emerson Jahn</p>
+    <footer class="footer container-fluid bg-dark text-white py-3 mt-5">
+        <p>Desenvolvido por Eduardo Pellenz e Emerson Jahn</p>
     </footer>
 
 </body>
