--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
     <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
@@ -32,7 +31,7 @@
             <div class="sobre col-lg-8 pr-5">
 
                 <div class="tags">Sobre o seminário</div>
-                <p>O VIII Seminário de Tecnologia, Inovação e Desenvolvimento Social é um ambiente de discussão e interação visando consolidar  aspectos técnicos e científicos ligados à formação profissional das áreas de engenharias e tecnologias. O evento propicia a ampliação da competência dos acadêmicos no sentido de interagir com outras áreas, oportunizando uma ampla visão dos desafios tecnológicos, sociais e ambientais, além de nortear acerca das responsabilidades profissionais e contribuir para a adoção de ações de sustentabilidade como forma de inovação e desenvolvimento da sociedade.</p>
+                <p>O 8º Seminário de Tecnologia, Inovação e Desenvolvimento Social – VIII STIDS é um evento anual da Área de Conhecimento de Ciências Exatas e Engenharias da UCS, composto por palestras e oficinas sobre temas pertinentes à área de atuação de nossa área de conhecimento. No ano de 2020, devido à pandemia de COVID-19, será realizado de forma online.</p>
 
                 <div class="tags pt-4">Promoção</div>
                 <p>Área do Conhecimento de Ciências Exatas e Engenharias</p>
@@ -79,8 +78,6 @@
             <div class="col-lg-12 mt-5 mt-lg-0">
 
                 <div class="tags">Consulte a programação</div>
-
-                <!-- <p>Selecione uma data para ver os seminários:</p> -->
 
                 <a href="/palestras.html" class="btn btn-dark btn-block">30 de setembro</a>
                 <a href="/palestras.html" class="btn btn-dark btn-block">01 de outubro</a>
