telas de palestras dos dias

--- a/palestras.html
+++ b/palestras.html
@@ -17,7 +17,7 @@
     <nav class="container-fluid bg-dark text-white py-4">
         <div class="row">
             <div class="col-md-2 navbar-text text-center text-md-left">
-                <a href="index.html">
+                <a target="_blank" href="https://www.ucs.br/site">
                     <img src="/imagens/Logo_UCS_Horizontal_Transparente.png" height="70" class="d-inline-block align-top" alt="Logo da UCS">
                 </a>
             </div>
