--- a/dados_salvos.html
+++ b/dados_salvos.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="imagem m-5">
-        <img src="/imagens/joinha.jpg" alt="Sucesso!" height="250">
+        <img src="/imagens/joinha_hueBR.jpg" alt="Sucesso!" height="250">
         <p>Inscrição realizada com sucesso!</p>
     </div>
 
