--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <nav class="container-fluid bg-dark text-white py-4">
         <div class="row">
             <div class="col-md-2 navbar-text text-center text-md-left">
-                <img src="/imagens/Logo_UCS_Horizontal_Transparente.png" height="70" class="d-inline-block align-top" alt="Logo da UCS">
+                <a  target="_blank" href="https://www.ucs.br/site">
+                    <img src="/imagens/Logo_UCS_Horizontal_Transparente.png" height="70" class="d-inline-block align-top" alt="Logo da UCS">
+                </a>
             </div>
             <div class="titulo col-md-10 my-auto text-center text-md-right">
                 <u> 8º SEMINÁRIO DE TECNOLOGIA, INOVAÇÃO E DESENVOLVIMENTO SOCIAL - VIII STIDS </u>
