Criação dos botões de inscrever-se

--- a/formulario.html
+++ b/formulario.html
@@ -79,7 +79,7 @@
 
         <div class="form-group">
             <label for="palestras">Palestras</label>
-            <select class="form-control" id="palestras">
+            <select class="form-control" id="palestras" multiple>
             <option>1</option> <!-- TODO inserir os dados recebidos -->
             <option>2</option>
             <option>3</option>
