--- a/palestras_0110.html
+++ b/palestras_0110.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/palestras.css">
     <link rel="stylesheet" href="./css/estilo.css">
     <script src="./js/palestras.js"></script>
+    <script src="./js/carrinho.js"></script>
 </head>
 <body>
     
