Inclusão dos botões de página inicial

--- a/formulario.html
+++ b/formulario.html
@@ -80,7 +80,7 @@
         </div>
 
         <div class="form-group">
-            <label for="palestras">Palestras selecionadas</label>
+            <label for="palestras">Palestras Selecionadas</label>
             <ul id="palestras"></ul>
         </div>
         
