Ajustes no redirecionamento das palestras

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
                 <div class="tags">Consulte a programação</div>
 
-                <a href="/palestras_3009.html" class="btn btn-dark btn-block">30 de setembro</a>
-                <a href="/palestras_0110.html" class="btn btn-dark btn-block">01 de outubro</a>
-                <a href="/palestras_0210.html" class="btn btn-dark btn-block">02 de outubro</a>
+                <a href="palestras_3009.html" class="btn btn-dark btn-block">30 de setembro</a>
+                <a href="palestras_0110.html" class="btn btn-dark btn-block">01 de outubro</a>
+                <a href="palestras_0210.html" class="btn btn-dark btn-block">02 de outubro</a>
 
             </div>
 
