Alteração de alguns caminhos.

--- a/formulario.html
+++ b/formulario.html
@@ -8,8 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/estilo.css">
-    <link rel="stylesheet" href="/css/formulario.css">
+    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./css/formulario.css">
     <script src="./js/carrinho.js"></script>
     <script src="./js/formulario.js"></script>
 </head>
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-md-2 navbar-text text-center text-md-left">
                 <a  target="_blank" href="https://www.ucs.br/site">
-                    <img src="/imagens/Logo_UCS_Horizontal_Transparente.png" height="70" class="d-inline-block align-top" alt="Logo da UCS">
+                    <img src="./imagens/Logo_UCS_Horizontal_Transparente.png" height="70" class="d-inline-block align-top" alt="Logo da UCS">
                 </a>
             </div>
             <div class="titulo col-md-10 my-auto text-center text-md-right">
