--- a/palestras_0110.html
+++ b/palestras_0110.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-md-2 navbar-text text-center text-md-left">
                 <a target="_blank" href="https://www.ucs.br/site">
-                    <img src="/imagens/Logo_UCS_Horizontal_Transparente.png" height="70" class="d-inline-block align-top" alt="Logo da UCS">
+                    <img src="./imagens/Logo_UCS_Horizontal_Transparente.png" height="70" class="d-inline-block align-top" alt="Logo da UCS">
                 </a>
             </div>
             <div class="titulo col-md-10 my-auto text-center text-md-right">
@@ -38,7 +38,7 @@
         <h3 class="d-inline-block">Palestras do dia 01/10/2020</h3>
 
         <div class="navbar-text text-center float-md-right mx-2">
-            <a href="/index.html" class="btn btn-dark">Página Inicial</a>
+            <a href="./index.html" class="btn btn-dark">Página Inicial</a>
         </div>
         
         <div class="text-center float-md-right d-block d-md-flex mt-2 mt-md-0">
