--- a/dados_salvos.html
+++ b/dados_salvos.html
@@ -8,18 +8,18 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href="/css/estilo.css"> -->
-    <link rel="stylesheet" href="/css/dados_salvos.css">
+    <!-- <link rel="stylesheet" href="./css/estilo.css"> -->
+    <link rel="stylesheet" href="./css/dados_salvos.css">
 </head>
 <body>
 
     <div class="imagem m-5">
-        <img src="/imagens/joinha_hueBR.jpg" alt="Sucesso!" height="250">
+        <img src="./imagens/joinha_hueBR.jpg" alt="Sucesso!" height="250">
         <p>Inscrição realizada com sucesso!</p>
     </div>
 
     <div class="pag-inicial">
-        <a href="/index.html" class="btn btn-dark">Página inicial</a>
+        <a href="./index.html" class="btn btn-dark">Página inicial</a>
     </div>
     
 </body>
