--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body>
     
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-md-2 navbar-text text-center text-md-left">
                 <a  target="_blank" href="https://www.ucs.br/site">
-                    <img src="/imagens/Logo_UCS_Horizontal_Transparente.png" height="70" class="d-inline-block align-top" alt="Logo da UCS">
+                    <img src="./imagens/Logo_UCS_Horizontal_Transparente.png" height="70" class="d-inline-block align-top" alt="Logo da UCS">
                 </a>
             </div>
             <div class="titulo col-md-10 my-auto text-center text-md-right">
@@ -81,9 +81,9 @@
 
                 <div class="tags">Consulte a programação</div>
 
-                <a href="/palestras_3009.html" class="btn btn-dark btn-block">30 de setembro</a>
-                <a href="/palestras_0110.html" class="btn btn-dark btn-block">01 de outubro</a>
-                <a href="/palestras_0210.html" class="btn btn-dark btn-block">02 de outubro</a>
+                <a href="./palestras_3009.html" class="btn btn-dark btn-block">30 de setembro</a>
+                <a href="./palestras_0110.html" class="btn btn-dark btn-block">01 de outubro</a>
+                <a href="./palestras_0210.html" class="btn btn-dark btn-block">02 de outubro</a>
 
             </div>
 
